--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "digital-creatures-deep-sea",
   "version": "1.0.0",
   "description": "Digital deep-sea creatures simulator web app",
-  "main": "index.html",
+  "main": "server.js",
   "scripts": {
     "dev": "npx http-server -p 8000 -o",
-    "start": "npx http-server -p 8000 -o",
+    "start": "node server.js",
+    "start:https": "node generate-cert.js && node server.js",
+    "generate-cert": "node generate-cert.js",
     "serve": "npx http-server -p 8000"
   },
   "keywords": [
